[gd_scene load_steps=2 format=3 uid="uid://dmmtb8p618ewe"]

[ext_resource type="Script" uid="uid://70j645gffn3o" path="res://ui/MainMenu.gd" id="1_b00nv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b00nv")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 676.0
offset_bottom = 496.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 656.0
offset_bottom = 156.0
alignment = 1

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Godot House"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nom"
placeholder_text = "Ton pseudo"
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cr√©er une partie"

[node name="MapFileSelectDialog" type="FileDialog" parent="Control/VBoxContainer/VBoxContainer/HostButton"]
unique_name_in_owner = true
oversampling_override = 1.0
filters = PackedStringArray("*.obj")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rejoindre une partie"

[node name="IPInput" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Adresse IP"
expand_to_text_length = true

[connection signal="pressed" from="Control/VBoxContainer/VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
